goals text align, fixed bugs, added left per day

--- a/organizer/static/organizer/styles.css
+++ b/organizer/static/organizer/styles.css
@@ -131,3 +131,6 @@ mark {
     flex-wrap: wrap;
 
 }
+.goals {
+    text-align: center;
+}
